DuPont DevSB/src/objects/pse__Filter__c.object
<CustomObject>
    <description>Contains values that restrict the list of resources or projects displayed in the Resource or Project Planners. Filters are applied directly by the user on the filters panel.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Custom_Filter_Arguments__c</fullName>
        <label>Custom Filter Arguments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Custom_Filter_Handler__c</fullName>
        <label>Custom Filter Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Field__c</fullName>
        <inlineHelpText>The API name of the field this filter operates on.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Filter_Set_SObject__c</fullName>
        <formula>pse__Filter_Set__r.pse__SObject__c</formula>
        <label>Filter Set SObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Filter_Set__c</fullName>
        <label>Filter Set</label>
        <referenceTo>pse__Filter_Set__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If false this filter will be not be used evaluated.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Value__c</fullName>
        <inlineHelpText>A JSON object that represents the value or values to compare with.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <displayFormat>FIL-{000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>